feat: updated pom.xml and moved the search result from dialog to a proper page.